--- a/mc3-runners-community/Podfile
+++ b/mc3-runners-community/Podfile
@@ -4,7 +4,10 @@
 target 'MC3-Running' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'Firebase/Core', :inhibit_warnings => true
+  pod 'Firebase/Database', :inhibit_warnings => true
+  pod 'Firebase/Auth', :inhibit_warnings => true
+  pod 'Firebase/Storage', :inhibit_warnings => true
   # Pods for MC3-Running
 
 end
